k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathology-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pathology-backend
  template:
    metadata:
      labels:
        app: pathology-backend
    spec:
      containers:
        - name: backend
          image: 843414937188.dkr.ecr.us-east-1.amazonaws.com/pathology-backend:1.3
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pathology-backend
spec:
  type: ClusterIP
  selector:
    app: pathology-backend
  ports:
    - port: 8080
      targetPort: 8080
