k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathology-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pathology-frontend
  template:
    metadata:
      labels:
        app: pathology-frontend
    spec:
      containers:
        - name: frontend
          image: 843414937188.dkr.ecr.us-east-1.amazonaws.com/pathology-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: pathology-frontend
spec:
  type: ClusterIP
  selector:
    app: pathology-frontend
  ports:
    - port: 80
      targetPort: 80
